--- a/Proje/Views/Animes/Create.cshtml
+++ b/Proje/Views/Animes/Create.cshtml
@@ -49,7 +49,7 @@
 			</div>
 			<div class="form-group mb-2">
 				<label asp-for="animeCategories" class="control-label"> </label>
-				@Html.ListBoxFor(x => x.animeCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple",required="required"})
+				@Html.ListBoxFor(x => x.animeCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
 			</div>
 			<div class="form-group">
 				<input type="submit" value="Create" class="btn btn-primary" />
